--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy to S3 + Invalidate CloudFront
 
 on:
   push:
-    branches: ["assignment-02"]
+    branches:
+      - assignment-02
 
 jobs:
   deploy:
@@ -23,7 +24,7 @@ jobs:
       - name: Build
         run: npm run build
 
-           - name: Configure AWS credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCES_KEY }}
